<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="end"
    tools:context="nathan.sizebook.enterData">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText android:id="@+id/edit_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterName" />

        <EditText android:id="@+id/edit_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterDate" />

        <EditText android:id="@+id/edit_Neck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterNeck" />

        <EditText android:id="@+id/edit_Bust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterBust" />

        <EditText android:id="@+id/edit_Chest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterChest" />

        <EditText android:id="@+id/edit_Waist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterWaist" />

        <EditText android:id="@+id/edit_Hip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterHip" />

        <EditText android:id="@+id/edit_Inseam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterInseam" />

        <EditText android:id="@+id/edit_Comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterComment"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm"
            android:id="@+id/button" />
    </LinearLayout>

</RelativeLayout>
