<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:id="@+id/data">

    <!-- http://stackoverflow.com/questions/5174481/android-edittext-done-instead-of-enter-or-word-wrap-instead-of-multi-line !-->

    <EditText android:id="@+id/edit_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject"
        android:hint="@string/enterName" />

    <EditText android:id="@+id/edit_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject|numberDecimal|numberSigned"
        android:layout_below="@id/edit_Name"
        android:hint="@string/enterDate" />

    <EditText android:id="@+id/edit_Neck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject|numberDecimal|numberSigned"
        android:layout_below="@id/edit_Date"
        android:hint="@string/enterNeck" />

    <EditText android:id="@+id/edit_Bust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject|numberDecimal|numberSigned"
        android:layout_below="@id/edit_Neck"
        android:hint="@string/enterBust" />

    <EditText android:id="@+id/edit_Chest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject|numberDecimal|numberSigned"
        android:layout_below="@id/edit_Bust"
        android:hint="@string/enterChest" />

    <EditText android:id="@+id/edit_Waist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject|numberDecimal|numberSigned"
        android:layout_below="@id/edit_Chest"
        android:hint="@string/enterWaist" />

    <EditText android:id="@+id/edit_Hip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject|numberDecimal|numberSigned"
        android:layout_below="@id/edit_Waist"
        android:hint="@string/enterHip" />

    <EditText android:id="@+id/edit_Inseam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject|numberDecimal|numberSigned"
        android:layout_below="@id/edit_Hip"
        android:hint="@string/enterInseam" />

    <EditText android:id="@+id/edit_Comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1000"
        android:inputType="textEmailAddress|textEmailSubject"
        android:layout_below="@id/edit_Comment"
        android:hint="@string/enterComment"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="right">

        <Button android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Delete"
            android:onClick="deleteButton" />

        <Button android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Confirm"
            android:onClick="confirmButton"/>

    </LinearLayout>
</LinearLayout>
